static/global-cache-bust-13.css
/**
 * @file
 * Global CSS (unscoped styles).
 */

/* Brutal reset */

* {
	box-sizing: border-box;
	border: 0 none;
	margin: 0;
	padding: 0;
}


/* Shared values */

:root,
html {
	/* --color-invert-bg: rgba(0, 0, 0, .66); */
	--color-invert-bg: #444;
	--color-invert-link-off: white;
	--color-invert-link-on: deepskyblue;

	--content-width: 60ch;
	--content-bleed: calc((100vw - var(--content-width)) / 2);

	--space-xl: 2rem;
	--space-l: 1rem;
	--space: .75rem;
	--space-s: .5rem;
	--space-xs: .25rem;

	--b-radius: .33rem;
	--b-radius-s: .2rem;
}


/* Responsive font-size */

@media (min-width: 30rem) and (max-width: 100rem) {
	:root,
	html {
		font-size: calc(1rem + .5 * ((100vmin - 30rem) / 70));
	}
}
@media (min-width: 100rem) {
	:root,
	html {
		font-size: 1.2rem;
	}
}


/* Main page "frame" */

body {
	font-family: 'Gudea', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* @see https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/ */
	/* overflow-x: hidden; */
}

#sapper {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	margin-left: auto;
	margin-right: auto;
	width: var(--content-width);
	max-width: 100%;
	min-height: 100vh;
}

@media (min-width: 60ch) {
	.full-vw {
		margin-left: calc(var(--content-bleed) * -1);
		margin-right: calc(var(--content-bleed) * -1);
	}
	.full-vw--padded {
		padding-right: var(--content-bleed);
		padding-left: var(--content-bleed);
	}
}


/*
	The <slot> in main layout wrapper may contain a direct child that needs to
	expand the full height of the "content zone".
	@see src/components/LayoutContentPage.svelte
*/

main {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}
main > .fill-h {
	flex-grow: 1;
}


/* Default tags */

img {
	display: inline-block;
	max-width: 100%;
}

a:link,
a:visited {
	color: currentColor;
}
a:focus,
a:hover,
a.is-active {
	color: cornflowerblue;
}

hr {
	border: 0;
	height: 1px;
	/* background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0)); */
	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

h1,
h2,
h3 {
	margin: var(--space-l) 0 var(--space-xs) 0;
}

table {
	border-collapse: collapse;
	margin: 0 var(--space) var(--space) var(--space);
}
th,
td {
	padding: calc(var(--space-s) / 2);
	text-align: left;
}
td {
	border-top: 1px solid grey;
}
th {
	position: sticky;
	top: 0;
	color: #888;
	background-color: white;
	font-weight: normal;
}
.sort {
	display: flex;
	cursor: pointer;
}
.sort > span {
	padding-right: var(--space-s);
}
table .sort.is-off .is-asc,
table .sort.is-off .is-desc {
	display: none;
}
table .sort.is-asc .is-desc {
	display: none;
}
table .sort.is-desc .is-asc {
	display: none;
}
th.is-active {
	background-color: cornflowerblue;
	color: white;
	font-weight: bold;
}
th.is-active button {
	color: inherit;
}

blockquote {
	margin-bottom: var(--space);
	font-size: 120%;
}

dl {
	display: grid;
	grid-template-columns: max-content auto;
}
dt {
	grid-column-start: 1;
	padding-right: var(--space-l);
	font-weight: bold;
}
dd {
	grid-column-start: 2;
}


/* Rich text styles */

/* .rich-text h1,
.rich-text h2,
.rich-text h3 {
	margin: var(--space-l) 0 0 0;
} */

.rich-text p,
.rich-text ul,
.rich-text ol {
	margin-bottom: var(--space);
}
.rich-text li {
	margin-left: var(--space-l);
}

.rich-text blockquote p {
	margin-bottom: 0;
}

.rich-text--inverse {
	color: white;
}
.rich-text--inverse a:focus,
.rich-text--inverse a:hover,
.rich-text--inverse a.is-active {
	color: var(--color-invert-link-on);
}


/* Generic utilities */

.f-grid {
	--gutter: var(--space-l);
	--item-width: 50%;
	display: flex;
	flex-wrap: wrap;
  justify-content: center;
	margin: 0;
	padding: 0;
}
.f-grid > * {
	flex: 1 0 var(--item-width);
}
.f-grid--g,
.f-grid--g > * {
	padding: calc(var(--gutter) / 2);
}
.f-grid--center {
	align-items: center;
}

/* Hide elements visually, but keep them available for screen-readers. */
.u-sr-only {
	position: absolute;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	border: 0;
	margin: -1px;
	padding: 0;
	width: 1px;
	height: 1px;
}

.u-faux-small-caps {
	font-size: .7rem;
	font-weight: bold;
	text-transform: uppercase;
	letter-spacing: .16ch;
}


/* By default, all <button> without class appear like links. */

button {
	font-size: inherit;
	font-weight: inherit;
	background: none;
	cursor: pointer;
	font-family: inherit;
}
button:focus,
button:hover,
button.is-active {
	color: cornflowerblue;
}

/* button, */
.btn,
input[type='button'],
input[type='reset'],
input[type='submit'] {
  background-color: var(--color-invert-bg);
  border: 1px solid var(--color-invert-bg);
  border-radius: var(--b-radius);
  color: white;
  cursor: pointer;
  display: inline-block;
	font-family: inherit;
  font-size: .7rem;
  font-weight: bold;
  /* height: 2rem; */
  /* letter-spacing: .1rem; */
	letter-spacing: .16ch;
  /* line-height: 2rem; */
  padding: var(--space) var(--space-l);
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  white-space: nowrap;
}

/* button:focus, */
/* button:hover, */
.btn:focus,
.btn:hover,
.btn.is-active,
input[type='button']:focus,
input[type='button']:hover,
input[type='button'].is-active,
input[type='reset']:hover,
input[type='reset']:focus,
input[type='reset'].is-active,
input[type='submit']:focus,
input[type='submit']:hover,
input[type='submit'].is-active {
	background-color: cornflowerblue;
	border-color: cornflowerblue;
	color: white;
	outline: 0;
}

.input--s.input--s,
.btn.btn--s {
	border-radius: var(--b-radius-s);
	padding: var(--space-xs) var(--space-s);
}

.btn.btn--inverse {
	border-color: white;
	background-color: white;
	color: cornflowerblue;
}
.btn.btn--inverse:hover,
.btn.btn--inverse:focus {
	border-color: cornflowerblue;
	background-color: cornflowerblue;
	color: white;
}

input[type='color'],
input[type='date'],
input[type='datetime'],
input[type='datetime-local'],
input[type='email'],
input[type='month'],
input[type='number'],
input[type='password'],
input[type='search'],
input[type='tel'],
input[type='text'],
input[type='url'],
input[type='week'],
input:not([type]),
textarea,
select {
	-webkit-appearance: none;
  background-color: transparent;
  border: 1px solid cornflowerblue;
  border-radius: var(--b-radius);
  box-shadow: none;
	font-family: inherit;
  /* height: 3.8rem; */
  /* padding: .6rem 1.0rem .7rem; */
  padding: var(--space) var(--space-l);
  width: 100%;
}

input[type='color']:focus,
input[type='date']:focus,
input[type='datetime']:focus,
input[type='datetime-local']:focus,
input[type='email']:focus,
input[type='month']:focus,
input[type='number']:focus,
input[type='password']:focus,
input[type='search']:focus,
input[type='tel']:focus,
input[type='text']:focus,
input[type='url']:focus,
input[type='week']:focus,
input:not([type]):focus,
textarea:focus,
select:focus {
	border-color: var(--color-invert-link-on);
	outline: 0;
}

summary {
	cursor: pointer;
}
summary:focus,
summary:hover {
	color: cornflowerblue;
}
/* details[open] summary ~ * {
	animation: tr-sweep .25s ease-in-out;
}
@keyframes tr-sweep {
	0%    { opacity: 0; transform: translateX(-2rem); }
	100%  { opacity: 1; transform: translateX(0); }
} */


/* Special effects */

.fx-shadow {
	box-shadow: 0 0 8px rgba(0,0,0,.18),0 8px 16px rgba(0,0,0,.36);
}


/* Global third-party components overrides */

/*
	TODO later :
	See https://github.com/rob-balfre/svelte-select/blob/master/docs/theming_variables.md
*/
/* .selectContainer {
	--padding: var(--space) var(--space-l) !important;
} */


/* Misc utilities. */

.u-center {
	text-align: center;
}

